# cane-gpu-perf

./: README.md  pyproject.toml
cane_gpu_perf/: __init__.py  config.py
cane_gpu_perf/bench/: runner.py
cane_gpu_perf/cli/: main.py
cane_gpu_perf/diagnose/: engine.py
cane_gpu_perf/gpu/: __init__.py  collector.py  efficiency.py  roofline.py  topology.py
cane_gpu_perf/scenarios/: base.py  batch_processing.py  chatbot.py  code_generation.py  rag_pipeline.py  runner.py
cane_gpu_perf/utils/: tokens.py
