[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cane-gpu-perf"
version = "0.1.0"
description = "GPU inference benchmarking with opinionated diagnostics"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
cane-perf = "cane_gpu_perf.cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
